--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.pot
 *.pyc
 __pycache__/
+
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
@@ -29,6 +30,7 @@ media
 build/
 develop-eggs/
 dist/
+data/
 downloads/
 eggs/
 .eggs/
